Finished implementation of chapter.

--- a/ControllersAndActions/Views/Shared/SimpleForm.cshtml
+++ b/ControllersAndActions/Views/Shared/SimpleForm.cshtml
@@ -4,7 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Controllers and Actions</title>
-    <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
+    @*<link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />*@
+    <link rel="stylesheet" href="@Url.Action("Index", "Example")" />
 </head>
 <body class="panel-body">
     <form method="post" asp-action="RecieveForm">
